@startuml

title __CONVERT_SORTED_ARRAY_TO_BINARY_SEARCH_TREE_108's Class Diagram__\n

  namespace cn.shui.order {
    namespace convert_sorted_array_to_binary_search_tree_108 {
      class cn.shui.order.convert_sorted_array_to_binary_search_tree_108.Solution {
          {static} + main()
          {static} - fun()
          {static} - sortedArrayToBST()
      }
    }
  }
  

  namespace cn.shui.order {
    namespace convert_sorted_array_to_binary_search_tree_108 {
      class cn.shui.order.convert_sorted_array_to_binary_search_tree_108.Solution.TreeNode {
          ~ val : int
          ~ TreeNode()
      }
    }
  }
  

  cn.shui.order.convert_sorted_array_to_binary_search_tree_108.Solution +-down- cn.shui.order.convert_sorted_array_to_binary_search_tree_108.Solution.TreeNode
  cn.shui.order.convert_sorted_array_to_binary_search_tree_108.Solution.TreeNode o-- cn.shui.order.convert_sorted_array_to_binary_search_tree_108.Solution.TreeNode : left
  cn.shui.order.convert_sorted_array_to_binary_search_tree_108.Solution.TreeNode o-- cn.shui.order.convert_sorted_array_to_binary_search_tree_108.Solution.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
